[gd_scene load_steps=5 format=3 uid="uid://dstx67q8t1okq"]

[ext_resource type="Script" path="res://Scripts/heat_bar.gd" id="1_t7aoi"]
[ext_resource type="FontFile" uid="uid://bgx8gu7aobui5" path="res://assets/Fonts/pixel_font.ttf" id="2_n4ndf"]
[ext_resource type="Script" path="res://Scripts/wanted_icon.gd" id="3_byf0x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mra4q"]
bg_color = Color(0.027451, 0.027451, 0.0862745, 0.784314)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.101961, 0.101961, 0.188235, 0.588235)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_size = 2
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5jnm"]
bg_color = Color(0, 0.698039, 0.2, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.101961, 0, 0.2, 0.196078)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 10
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[node name="HeatBar" type="ProgressBar"]
modulate = Color(0, 0.698039, 0.2, 1)
offset_right = 259.0
offset_bottom = 30.0
theme_override_styles/background = SubResource("StyleBoxFlat_mra4q")
theme_override_styles/fill = SubResource("StyleBoxFlat_a5jnm")
value = 0.0
show_percentage = false
script = ExtResource("1_t7aoi")

[node name="HeatLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -15.5
offset_right = 99.0
offset_bottom = 15.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_n4ndf")
theme_override_font_sizes/font_size = 15
text = "HEAT"
vertical_alignment = 1

[node name="ValueLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -15.5
offset_right = -8.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.427451)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("2_n4ndf")
theme_override_font_sizes/font_size = 15
text = "NONE"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WantedIcon" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -16.0
offset_bottom = 16.0
grow_vertical = 2
script = ExtResource("3_byf0x")
star_color = Color(1, 0.215686, 0.215686, 1)
star_border_color = Color(0.8, 0, 0, 1) 